<resources>
    <string name="app_name">MoviesRecycler</string>
    <string name="critical_error_screen_title">Что-то сломалось</string>
    <string name="critical_error_screen_text">Постараемся быстро починить</string>
    <string name="critical_error_screen_again">Попробовать снова</string>
    <string name="movies_list_title">Обзоры фильмов</string>
    <string name="cd_poster">poster</string>
    <string name="snackbar_error_message">Не могу обновить данные.\nПроверь соединение с интернетом.</string>
    <string name="snackbar_no_movies_message">В базе данных больше нет фильмов</string>
    <string name="snackbar_time_message">Гружу данные из сервера, потребуется %1$d секунд</string>
    <string name="search_field_placeholder">Введите название фильма</string>
    <string name="cancel_button_title">Отмена</string>
</resources>